Blank Error/CSP Issue fix - logging firebase.js + useFirebase.js + AuthContext.jsx ;;; inserted CSP meta tag in index.html in my frontend + added webmanifest

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://www.googleapis.com https://securetoken.googleapis.com https://apis.google.com https://identitytoolkit.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https:; connect-src 'self' https://firestore.googleapis.com https://www.googleapis.com https://securetoken.googleapis.com https://identitytoolkit.googleapis.com https://firebase.googleapis.com https://firebaseinstallations.googleapis.com https://content-firestore.googleapis.com ws://localhost:* http://localhost:* https://*.onrender.com https://*.netlify.app; frame-src 'self' https://www.google.com https://recaptcha.google.com; object-src 'none';" />
+
     
     <!-- Primary Meta Tags -->
     <title>Prompt Sherlock - Turn Images into Perfect AI Art Prompts</title>
@@ -42,6 +44,8 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://firestore.googleapis.com" />
+    <link rel="preconnect" href="https://identitytoolkit.googleapis.com" />
   </head>
   <body>
     <div id="root"></div>
