lazy FB AuthContext.jsx + index.html vite.svg for all icons temporarily to stop the icon errors + simple site.webmanifest to stop the manifest errors

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,10 +35,10 @@
     <!-- Theme Color -->
     <meta name="theme-color" content="#3B82F6" />
     
-    <!-- Favicon alternatives -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <!-- FIXED: Use only vite.svg to avoid missing file errors -->
+    <link rel="apple-touch-icon" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/vite.svg" />
     <link rel="manifest" href="/site.webmanifest" />
     
     <!-- Preconnect for performance -->
